--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,6 +10,7 @@ jobs:
     name: update this ahamed's README
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - uses: ahamed/ahamed@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
