update action file

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,16 +1,15 @@
-name: Ahamed Readme
+name: Waka Readme
 
 on:
-  schedule:
-    # Runs at 12am UTC
-    - cron: '*/1 * * * *'
+    schedule:
+        # Runs at 12am UTC
+        - cron: '*/1 * * * *'
 
 jobs:
-  update-readme:
-    name: update this ahamed's README
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: ahamed/ahamed@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+    update-readme:
+        name: Update this repo's README
+        runs-on: ubuntu-latest
+        steps:
+            - uses: ahamed/ahamed@master
+              with:
+                  WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
