--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,6 +10,6 @@ jobs:
         name: Update this repo's README
         runs-on: ubuntu-latest
         steps:
-            - uses: ahamed/ahamed@master
+            - uses: athul/waka-readme@master
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
