--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
     schedule:
         # Runs at 12am UTC
-        - cron: '0 21 * * *'
+        - cron: '*/1 * * * *'
 
 jobs:
     update-readme:
