--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
     schedule:
         # Runs at 12am UTC
-        - cron: '0 0 * * *'
+        - cron: "0 0 * * *"
 
 jobs:
     update-readme:
@@ -13,3 +13,10 @@ jobs:
             - uses: athul/waka-readme@master
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+    devcard:
+        runs-on: ubuntu-latest
+        steps:
+            - name: devcard
+              uses: dailydotdev/action-devcard@2.0.2
+              with:
+                  devcard_id: ${{ secrets.DEVCARD_ID }}
